Updated errors to take the source, added the linker, updated the table functionality, and added some more utilities.